Fix HTML and CSS: remove unnecessary line breaks in lead title and ensure display block for title and subtitle

--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -6,6 +6,7 @@
 }
 
 .lead__title {
+  display: block;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -17,6 +18,7 @@
 }
 
 .lead__subtitle {
+  display: block;
   width: 100%;
   margin-top: 72px;
   margin-left: auto;
